Implement Send Money feature with dynamic form and Room database integration
- Added `SendMoneyScreen.kt` with dynamic form generation based on JSON data from `services.json`.
- Implemented `SendMoneyViewModel.kt` to handle loading services data and saving user requests.
- Created `SendMoneyViewModelFactory.kt` for `SendMoneyViewModel` instantiation.
- Added Room database setup (`AppDatabase.kt`, `RequestDao.kt`, `RequestEntity.kt`) to store send money requests.
- Defined `RequestRepository.kt` and `ServicesRepository.kt` for data handling.
- Updated `MainActivity.kt` to include navigation to `SendMoneyScreen`.
- Modified `LoginScreen.kt` to navigate to `SendMoneyScreen` upon successful login.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,10 @@ composeBom = "2025.08.00"
 
 androidxNavigation = "2.9.3"
 appcompat = "1.7.1"
-systemuicontroller = "0.32.0"
+systemuicontroller = "0.36.0"
+roomKtx = "2.7.2"
+androidxRoom = "2.7.2"
+kotlinxSerialization = "1.9.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -32,6 +35,10 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxNavigation" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 google-accompanist = { group = "com.google.accompanist", name = "accompanist-systemuicontroller", version.ref = "systemuicontroller" }
+androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "androidxRoom" }
+androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "roomKtx" }
+androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "androidxRoom" }
+kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 
 
 [plugins]
@@ -40,5 +47,5 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
 androidx-navigation = { id = "androidx.navigation.safeargs.kotlin", version.ref = "androidxNavigation" }
-
+androidx-room = { id = "androidx.room", version.ref = "androidxRoom" }
 
